improved login navigation, added styling to avoid page stretch on spam comments

--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,11 @@ main > h2 {
   margin: 8px 0px;
   border: 1px solid black;
 }
+.comment-body > * {
+  overflow-wrap: break-word;
+  word-break: break-word;
+  white-space: pre-wrap;
+}
 .comment-count {
   justify-self: center;
 }
@@ -240,4 +245,9 @@ a:has(> #logo) {
   margin-left: 8px;
   padding: 8px;
   justify-self: end;
+}
+
+textarea {
+  width: 100%;
+  max-width: 1700px;
 }
